name:                mtsbs
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Brian Schroeder
maintainer:          bts@gmail.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Transformers
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.7             && < 4.8,
                       mtl >= 2.2.1            && < 2.3,
                       containers >= 0.5.5.1   && < 0.6
                       --transformers >= 0.4.1.0 && < 0.5
  -- hs-source-dirs:
  default-language:    Haskell2010
